#116: Add whole ChatMessageDto to Firebase notification